@@ -1,3 +1,5 @@
+  - add error message for empty if/elseif statements (eykanal,
+    monte)
   - cast selected value to string for comparison in html_radios
     (Exeption, monte)
   - updated html_select_date's year_as_text-feature to be xhtml compliant
